force-app/main/default/objects/User/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <label>AE</label>
    <relationshipName>Account_Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>