force-app/main/default/objects/User/fields/Dominio_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Dominio_Usuario__c</fullName>
    <formula>RIGHT( Email , LEN(Email ) - FIND(&quot;@&quot;,Email ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dominio Usuario</label>
    <type>Text</type>
</CustomField>