force-app/main/default/objects/User/fields/lep360learning__creation_date__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__creation_date__c</fullName>
    <label>360Learning creation date</label>
    <type>Date</type>
</CustomField>