force-app/main/default/objects/User/fields/lep360learning__User_id__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__User_id__c</fullName>
    <label>360Learning User id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>