force-app/main/default/objects/User/listViews/Deactivated_Users.listView-meta.xml
<ListView>
    <fullName>Deactivated_Users</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Deactivated Users</label>
    <language>en_US</language>
</ListView>