force-app/main/default/objects/User/listViews/Jana_Machado.listView-meta.xml
<ListView>
    <fullName>Jana_Machado</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Jana Machado</label>
    <language>en_US</language>
</ListView>